<resources>
    <string name="app_name">IBroker</string>
    <string name="hello">Open calendar</string>
    <string name="open">Open</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
</resources>

